[project]
name = "growpanel"
version = "0.1.0"
description = "Python SDK for the GrowPanel subscription analytics REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GrowPanel ApS" }]
requires-python = ">=3.9"
keywords = ["growpanel", "saas", "metrics", "mrr", "arr", "churn", "subscription-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx >= 0.27",
    "attrs >= 24.0",
    "python-dateutil >= 2.8",
]

[project.urls]
Homepage = "https://growpanel.io"
Documentation = "https://api.growpanel.io/docs"
Repository = "https://github.com/growpanel/growpanel-sdk-python"

[project.optional-dependencies]
dev = [
    "openapi-python-client >= 0.21",
    "build >= 1.0",
    "twine >= 5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/growpanel"]

[tool.hatch.build.targets.sdist]
include = ["src/growpanel", "README.md", "LICENSE"]
